# kssg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/kssg/: __init__.py  __main__.py  cli.py  config.py  context.py  generator.py  items.py  post_filename_parser.py
